--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,7 +30,7 @@
     -->
     <title>Vibe Ecommerce by Twyla Tang</title>
   </head>
-  <body>
+  <body style="overflow-x: hidden !important;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
